# django_web_shop

./: pyproject.toml
api/: urls.py  views.py
django_web_shop/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_order_product_order_products.py
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_rename_categorymodel_category_and_more.py  0003_alter_category_parent.py  0004_alter_category_parent.py
templates/products/: detail.html  main_page.html
